# docs/swagger.yaml
@@ -10,6 +10,42 @@ paths:
             type: string
       tags:
       - 首页
+  /user/createUser:
+    get:
+      parameters:
+      - description: 用户名
+        in: query
+        name: name
+        type: string
+      - description: 密码
+        in: query
+        name: password
+        type: string
+      - description: 确认密码
+        in: query
+        name: repassword
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: string
+      tags:
+      - 用户模块
+  /user/deleteUser:
+    get:
+      parameters:
+      - description: 用户id
+        in: query
+        name: id
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: string
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       responses:
@@ -18,5 +54,57 @@ paths:
           schema:
             type: string
       tags:
-      - 获取用户列表
+      - 用户模块
+  /user/login:
+    post:
+      parameters:
+      - description: 用户名称
+        in: formData
+        name: name
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: ""
+      tags:
+      - 用户模块
+  /user/update:
+    post:
+      parameters:
+      - description: 用户id
+        in: formData
+        name: id
+        type: string
+      - description: 名称
+        in: formData
+        name: name
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      - description: 手机号
+        in: formData
+        name: phone
+        type: string
+      - description: 邮箱
+        in: formData
+        name: email
+        type: string
+      - description: 性别
+        in: formData
+        name: identity
+        type: string
+      responses:
+        "200":
+          description: code","message"}
+          schema:
+            type: string
+      tags:
+      - 用户模块
 swagger: "2.0"
