# router/router.go
@@ -16,5 +16,9 @@ func Router() *gin.Engine{
 	
 	r.GET("/index",service.GetIndex)
 	r.GET("/user/getUserList",service.GetUserList)
+	r.GET("/user/createUser",service.CreateUser)
+	r.GET("/user/deleteUser",service.DeleteUser)
+	r.POST("/user/update",service.UpdateUser)
+	r.POST("/user/login",service.Login)
 	return r
 }
